feat: add static route and file serve

--- a/htmls/method_not_allowed.html
+++ b/htmls/method_not_allowed.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is random Test </title>
+    <title>Error - Method Not Allowed</title>
 </head>
 <body>
-    This is body of that test
+    The Method is not allowed 
 </body>
 </html>
