feat: add static file serve
- add file traversal attack prevention
- add mimetype detection from file extension
- use mg_send_mime_file, to serve the files faster and better

--- a/htmls/index.html
+++ b/htmls/index.html
@@ -4,8 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is random Test </title>
+    <link rel="stylesheet" href="/htmls/style.css">
+    <script src="/htmls/script.js"></script>
+    <script src="./../Readme.md"></script>
 </head>
 <body>
-    This is homepage
+    <header>
+        <div class="navbar">
+            <div class="navitem">
+                NaveItem1
+            </div>
+            <div class="navitem">
+                NaveItem2
+            </div>
+            <div class="navitem">
+                NaveItem3
+            </div>
+            <div class="navitem">
+                NaveItem4
+            </div>
+        </div>
+    </header>
+    <main>
+        <section>
+            This is one section
+        </section>
+        <section>
+            This is another section
+        </section>
+        <div>
+            <img src="/static/img/squ.jpg" alt="">
+        </div>
+    </main>
+    <footer>
+        <div>
+            this is footer
+        </div>        
+    </footer>
 </body>
 </html>
