feat: add html template

--- a/htmls/template.html
+++ b/htmls/template.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is random Test </title>
+    <title>Template Page</title>
     <link rel="stylesheet" href="/htmls/style.css">
     <script src="/htmls/script.js"></script>
     <script src="./../Readme.md"></script>
 </head>
 <body>
-    {{name}}
+    Hello Admin <span>[{{name}}]<span>!<br>
+    You are {{age}} years old.
 </body>
 </html>
