docs: made changes to readme in docs and main
- add logo for project
- add docs and code example
- update readme

--- a/htmls/template.html
+++ b/htmls/template.html
@@ -11,6 +11,6 @@
 <body>
     Hello Admin <span>[{{name}}]<span>!<br>
     You are {{age}} years old.
-    {{is_dumb}}
+    Is Dumb {{is_dumb}}
 </body>
 </html>
