feat: add proper demo code

--- a/htmls/about.html
+++ b/htmls/about.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Page</title>
+    <title>Peanut-Butter</title>
+    <link rel="stylesheet" href="/htmls/style.css">
 </head>
-<body>
-    <div>
-        This is About Page
-    </div>
+<body class="about">
+    <h1>Peanut-Butter</h1>
+    <div class="logo"></div>
+    <p>
+        Peanut-Butter a simple web-backend mini-framework written in C. 
+        With main focus on:-
+        <ul>
+            <li>Simplicity</li>
+            <li>Fast</li>
+            <li>Just Works</li>
+        </ul>
+    </p>
 </body>
 </html>
