--- a/htmls/contact.html
+++ b/htmls/contact.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Greeting</title>
+    <title>Contact - Page </title>
      <link rel="stylesheet" href="/htmls/style.css">
 </head>
 <body class="tmp">
-    <h1>Hello Admin <span> {{name}} </span>!</h1>
-    <p>You are <strong>{{age}}</strong> years old.</p>
-    <p class="dumb-status">Is Working: <strong>{{is_dumb}}</strong></p>
-
+    <h1>Contact:- <span> {{name}} </span>!</h1>
+    <ul>
+        <li>Name:- {{name}}</li>
+        <li>Phone:- {{phone}}</li>
+        <li>Address:- {{address}}</li>
+    </ul>
 </body>
 </html>
