--- a/htmls/non_admin.html
+++ b/htmls/non_admin.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="/htmls/style.css">
 </head>
 <body>
-    <h1>Peanut-Butter</h1>
-    <div class="logo"></div>
+    <h1>Hi! Non-admin users</h1>
 </body>
 </html>
