--- a/htmls/forms.html
+++ b/htmls/forms.html
@@ -8,11 +8,8 @@
 <body>
     <h3>Peanut-Butter-forms</h3>
     <form action="/forms" method="POST">
+        <input type="file" name="resume">
         <input type="text" name="text-input1">
-        <input type="text" name="text-input2">
-        <input type="text" name="text-input3">
-        <input type="text" name="text-input4">
-        <input type="text" name="text-input5">
         <button type="submit">submit</button>
     </form>
 
