feat: update post handeling

--- a/htmls/forms.html
+++ b/htmls/forms.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peanut-Butter</title>
@@ -7,11 +8,10 @@
 </head>
 <body>
     <h3>Peanut-Butter-forms</h3>
-    <form action="/forms" method="POST">
+    <form action="/forms" method="post" enctype="multipart/form-data">
         <input type="file" name="resume">
         <input type="text" name="text-input1">
         <button type="submit">submit</button>
     </form>
-
 </body>
 </html>
